--- a/Rolllin'/Rolllin'.CSharp.Editor.csproj
+++ b/Rolllin'/Rolllin'.CSharp.Editor.csproj
@@ -145,11 +145,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\EasySpriteSheetCopy\Editor\EasySpriteSheetCopy.cs" />
     <Compile Include="Assets\Editor\CrossPlatformInput\CrossPlatformInputInitialize.cs" />
     <Compile Include="Assets\LeanTouch\Editor\LeanTouch_Editor.cs" />
     <Compile Include="Assets\VSCode\Plugins\Editor\VSCode.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Project\Materials\Shaders\TestSpriteShader.shader" />
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
