--- a/Rolllin'/Rolllin'.CSharp.Plugins.csproj
+++ b/Rolllin'/Rolllin'.CSharp.Plugins.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Assets\Standard Assets\Utility\WaypointProgressTracker.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Project\Materials\Shaders\TestSpriteShader.shader" />
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
