--- a/Rolllin'/Rolllin'.CSharp.csproj
+++ b/Rolllin'/Rolllin'.CSharp.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Assets\LeanTouch\Scripts\LeanTouch.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Project\Materials\Shaders\TestSpriteShader.shader" />
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
